# focus-stack

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE.md  Makefile  Makefile.windows  README.md
.github/workflows/: linux_binary.yml  mac_binary.yml  release.yml  run_tests.yml  windows_binary.yml
debian/: changelog  control  copyright  rules
docs/: Algorithms.md  focus-stack.1  focus-stack.html  focus-stack.md
packaging/: focus-stack.desktop
packaging/macosx/: Info.plist  PkgInfo  focus-stack-gui.scpt
src/: fast_bilateral.hh  focusstack.cc  focusstack.hh  gtest_main.cc  histogrampercentile.cc  histogrampercentile.hh  logger.cc  logger.hh  main.cc  options.cc  options.hh  radialfilter.cc  radialfilter.hh  radialfilter_tests.cc  task_3dpreview.cc  task_3dpreview.hh  task_align.cc  task_align.hh  task_background_removal.cc  task_background_removal.hh  task_denoise.cc  task_denoise.hh  task_depthmap.cc  task_depthmap.hh  task_depthmap_inpaint.cc  task_depthmap_inpaint.hh  task_focusmeasure.cc  task_focusmeasure.hh  task_grayscale.cc  task_grayscale.hh  task_grayscale_tests.cc  task_loadimg.cc  task_loadimg.hh  task_merge.cc  task_merge.hh  task_reassign.cc  task_reassign.hh  task_saveimg.cc  task_saveimg.hh  task_wavelet.cc  (+9 more)
